fix: ticker taking too long to appear

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -55,7 +55,7 @@ body {
 /* Marquee Animation */
 @keyframes marquee {
   0% {
-    transform: translateX(100%);
+    transform: translateX(100vw);
   }
   100% {
     transform: translateX(-100%);
